--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,9 +1,9 @@
 <div class="contenedorSlogan">
     <div class="slogan row justify-content-start">
         <div class="subSlogan col-6">
-            <h1>BIENVENIDO A GOOD MARKET</h1>
+            <h1>BIENVENIDO A</h1><h1 class="tituloMarca">GOOD MARKET</h1>
             <hr class="lineaSeparadora">
-            <h3>¿Eso? También lo tenemos!</h3>
+            <h3>¿Eso? Si, también lo tenemos!</h3>
             <h4>Comprúebalo tú mismo</h4>
         </div>
         <div class= "col-6 loginRegister">
@@ -12,7 +12,7 @@
                     <div class="btnLoginRegister">
                         <button id="btnRegistrar" class="btn btn-outline-secondary btnRegistrar" >Registrarme</button>
                         <button id="btnIngresar" class="btn btn-outline-success btnIngresar" >Ingresar</button>
-                        <button id="btnGitHome" class="btn btnGitHome "><img class="gitHubLogin" src="/../../images/github.png" alt=""></button>
+                        <button id="btnGitHome" class="btn btnGitHome btn-outline-secondary"><img class="gitHubLogin" src="/../../images/github.png" alt=""></button>
                     </div>
                 </div>
             </div>
