--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -15,10 +15,12 @@
             <div class="mb-3 form-check">
                 <div id="alerta" class="form-text"></div>
                 <div class="register">
-                    <h6>¿No estar registrado?</h6> | <a href="/register">registrarme</a>
+                    <h6>¿No estar registrado? |&nbsp </h6> 
+                    <a href="/register">registrarme</a>
                 </div>
                 <div class="restore">
-                    <h6>¿Olvidaste la contraseña?</h6> | <a href="/restore">restaurar contraseña</a> 
+                    <h6>¿Olvidaste la contraseña? |&nbsp </h6> 
+                    <a href="/restore">restaurar contraseña</a> 
                 </div>
                 
                 
