--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -20,7 +20,7 @@
 .ajustes{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .encabezado{
