--- a/src/views/cartId.handlebars
+++ b/src/views/cartId.handlebars
@@ -25,7 +25,12 @@
                 {{/each}}
             </tbody>
         </table>
+        <button id="purchase" class="btn btn-outline-success" >Finalizar Compra</button>
     </div>
+    
 </div>
 
- <script src="/js/cart.js"></script>
+
+
+<script src="/js/purchase.js"></script>
+<script src="/js/cart.js"></script>
