se soluciona problema de ticket y se agrega mocking

--- a/src/views/ticket.handlebars
+++ b/src/views/ticket.handlebars
@@ -1,8 +1,9 @@
 <div class="container">
     <div class="ajustes container">
         <h1>Compra finalizada con éxito</h1>
-        <h3>id de compra # {{idBuy}}</h3>
-        <h3>Cliente: {{nameClient}} {{lastNameClient}}</h3>
+        <h6>fecha y hora: {{fecha}}</h6>
+        <h5>id de compra # {{idBuy}}</h5>
+        <h5>Cliente: {{nameClient}} {{lastNameClient}}</h5>
         <table class="table table-bordered">
             <thead class="encabezado">
                 <tr>
