se realiza todo lo correspondiente al proyecto

--- a/src/views/recuperar.handlebars
+++ b/src/views/recuperar.handlebars
@@ -4,7 +4,7 @@
     <form>
         <div class="mb-3">
             <label for="email" class="form-label">Email address (user)</label>
-            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" value="{{email}}" readonly='readonly'> 
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
@@ -16,7 +16,7 @@
             <a href="/register">registrarme</a> 
             
         </div>
-        <button id="botonRestore" class="btn btn-primary">Restaurar</button>
+        <button id="botonRecuperar" class="btn btn-primary">Restaurar</button>
     </form>
 </div>
-<script src="/js/restore.js"></script>
+<script src="/js/recuperar.js"></script>
