--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -242,3 +242,13 @@
     background-color: #75797b5e;
     border-color: #75797b5e;
 }
+
+.restored{
+    width: 50vw;
+    margin: none;
+    background-color: #6d6d6d36;
+    border-radius: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
