--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>{{title}}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Parisienne&family=Passion+One:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/{{style}}">
   </head>
@@ -37,6 +37,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                   <li>Bienvenido {{user}}</li>
                   <li><a class="dropdown-item Logout" id="logout" >LogOut</a></li>
+                  <li><a class="dropdown-item Logout" id="RecuperarPass" href="">Cambiar Pass</a></li>
 
                 </ul>
               </div>
