--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -20,6 +20,8 @@
                 <input class="form-control" type='number' name='code' id='code' placeholder='1'/>
                 <label htmlFor='stock'> Stock: </label>
                 <input class="form-control" type='number' name='stock' id='stock' placeholder='1'/>
+                <label htmlFor='owner'> Owner: </label>
+                <input class="form-control" type='string' name='owner' id='owner' value={{email}} readonly="readonly"/>
                 <div class="contenedorBoton container">
                     <button class="btn btn-outline-success btnFin" type="submit" onClick="handleClick()">AGREGAR</button>
                 </div>
@@ -39,6 +41,7 @@
                     <th scope="col">Code</th>
                     <th scope="col">Stock</th>
                     <th scope="col">Status</th>
+                    <th scope="col">Owner</th>
                     <th scope="col">Eliminar</th>
                 </tr>
             </thead>
@@ -47,6 +50,8 @@
             </tbody>
         </table>
     </div>
+
+
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
