--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -36,9 +36,9 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                   <li>Bienvenido {{user}}</li>
+                  <li><a class="dropdown-item Logout" id="usuario" href="/../uploader/{{idUser}}" >Cargar documentacion</a></li>
                   <li><a class="dropdown-item Logout" id="logout" >LogOut</a></li>
                   <li><a class="dropdown-item Logout" id="RecuperarPass" href="">Cambiar Pass</a></li>
-
                 </ul>
               </div>
               <a id="carrito">
