--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -27,4 +27,4 @@
         </form>
     </div>
 </div>
-<script src="./js/register.js"></script>
+<script type="module" src="/js/register.js"></script>
